- 全角数字の半角変換機能を追加 - ハイフン、スペースの自動削除機能を実装 - 複数の入力形式に対応（100-0001、1000001、１００−０００１など）

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
                 <input
                     type="text"
                     id="postal-code"
-                    placeholder="例: 1000001"
-                    maxlength="8"
+                    placeholder="例: 100-0001 または 1000001"
                 >
                 <button id="search-btn">検索</button>
             </div>
-            <small>※ハイフンなしで入力してください</small>
+            <small>※ハイフンありでも検索できます</small>
         </div>
 
         <div id="loading" class="loading" style="display: none;">
